--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
