Revert "frontend destruct"
This reverts commit b53bb6f914190ad43b934e29ded4c00fe9f0e1c0.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "server-dev": "cd server && npm run dev",
+    "client-dev": "cd client && npm run dev",
+    "dev": "concurrently \"npm run client-dev\" \"npm run server-dev\"",
     "start": "cd server && npm start",
+    "build": "cd client && npm run build",
+    "acumen": "npm run build && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
